force-app/main/default/objects/Acceso_al_portal__c/Acceso_al_portal__c.object-meta.xml
<CustomObject>
    <label>Acceso al portal</label>
    <nameField>
        <label>Nombre de Acceso al portal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acceso al portal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>