force-app/main/default/objects/Acceso_al_portal__c/fields/Tipo_de_portal__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_portal__c</fullName>
    <label>Tipo de portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emisión</fullName>
            </value>
            <value>
                <fullName>Cotización</fullName>
            </value>
            <value>
                <fullName>Fianzas</fullName>
            </value>
            <value>
                <fullName>Siniestros</fullName>
            </value>
            <value>
                <fullName>Comisiones</fullName>
            </value>
            <value>
                <fullName>Otro.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>