force-app/main/default/objects/Acceso_al_portal__c/fields/URL_del_portal__c.field-meta.xml
<CustomField>
    <fullName>URL_del_portal__c</fullName>
    <label>URL del portal</label>
    <type>Url</type>
</CustomField>