force-app/main/default/objects/Acceso_al_portal__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <label>Usuario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>