force-app/main/default/objects/Acceso_al_portal__c/validationRules/URL_requerida_con_Usuario.validationRule-meta.xml
<ValidationRule>
    <fullName>URL_requerida_con_Usuario</fullName>
    <active>true</active>
    <description>Si se especifica un usuario, la URL del portal es obligatoria.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Usuario__c)), ISBLANK(URL_del_portal__c))</errorConditionFormula>
    <errorDisplayField>URL_del_portal__c</errorDisplayField>
    <errorMessage>La URL del portal es obligatoria cuando se especifica un usuario.</errorMessage>
</ValidationRule>