force-app/main/default/objects/Acceso_al_portal__c/validationRules/Usuario_requerido_con_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>Usuario_requerido_con_URL</fullName>
    <active>true</active>
    <description>Si se especifica una URL de portal, el campo Usuario es obligatorio.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(URL_del_portal__c)), ISBLANK(Usuario__c))</errorConditionFormula>
    <errorDisplayField>Usuario__c</errorDisplayField>
    <errorMessage>El campo Usuario es obligatorio cuando se especifica una URL de portal.</errorMessage>
</ValidationRule>